<resources>
    <string name="app_name">GrabAndGo</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_slide_menu">SlideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="logout">Sign Off</string>
    <string name="profile">Profile</string>
    <string name="DailyOrders">Daily Orders</string>
    <string name="unprocessed">Inprogress</string>
    <string name="completed">Completed</string>
    <string name="paid">Paid</string>
    <string name="historyOrders">History Orders</string>
    <string name="historyOrdersQuery">History Orders Query</string>
    <string name="financialAnalysis">Financial Analysis</string>
    <string name="financialRevenue">Revenue</string>
    <string name="revenueDaily">Revenue(Daily)</string>
    <string name="revenueMonthly">Revenue(Monthly)</string>
    <string name="revenueYearly">Revenue(Yearly)</string>
    <string name="revenueDaily_s">Daily</string>
    <string name="revenueMonthly_s">Monthly</string>
    <string name="revenueYearly_s">Yearly</string>
    <string name="financialSalesCharts">Sales Charts</string>
    <string name="salesChartsDaily">Sales Charts(Daily)</string>
    <string name="salesChartsMonthly">Sales Charts(Monthly)</string>
    <string name="salesChartsDaily_s">Daily</string>
    <string name="salesChartsMonthly_s">Monthly</string>
    <string name="inprogressOrderDetail">Order Detail (Inprogress)</string>
    <string name="completedOrderDetail">Order Detail (Completed)</string>
    <string name="paidOrderDetail">Order Detail (Paid)</string>
    <!-- Sing In -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forget">Recover password</string>
    <string name="checkRememberMe">Remember Me</string>
    <string name="msg_enterUsername">Enter Username</string>
    <string name="msg_enterPassword">Enter Password</string>
    <string name="msg_NoNetwork">No Network</string>
    <string name="msg_UsernameOrPasswordError">該帳號不存在或密碼錯誤</string>
    <!-- Regiater -->
    <string name="mustEnter">*為必填欄位</string>
    <string name="usernameInput">Username (*)</string>
    <string name="passwordInput">Password (*)</string>
    <string name="passwordConfirm">Password Confirm (*)</string>
    <string name="storeName">Store Name (*)</string>
    <string name="RestType">Restaurant Type (*)</string>
    <string name="branch">Branch</string>
    <string name="address">Address (*)</string>
    <string name="phone">Phone (*)</string>
    <string name="email">Email (*)</string>
    <string name="owner">Owner (*)</string>
    <string name="url">Official Website</string>
    <!-- Send Email -->
    <string name="sendEmailBody"> 我們已經寄出一封認證信至您的信箱，請點擊認證信中的連結開通您的帳戶開始上架產品喔。\n感謝您的配合</string>
    <string name="sendEmailTitle">註冊成功</string>
    <!-- Drawer -->
    <string name="visitor">Visitor~</string>
    <string name="hello">Hello,</string>
    <!-- Validate Not Yet -->
    <string name="notBeenValidate">您尚未驗證帳號，僅能使用會員資訊相關功能．</string>
    <string name="notBeenValidateSecond">如需使用其他功能，請至您註冊的信箱點選驗證信．</string>
    <string name="notBeenValidateThird">如需重發驗證信，請您點選下方按鈕，感謝您的配合．</string>
    <string name="reSendEmail">重新寄送驗證信</string>
    <string name="resendEmailOK">重寄驗證信成功</string>
    <!-- Restaurant Information -->
    <string name="restName_i">Restaurant :</string>
    <string name="restType_i">Restaurant Type :</string>
    <string name="branch_i">Branch :</string>
    <string name="owner_i">Owner :</string>
    <string name="address_i">Address :</string>
    <string name="phone_i">Phone :</string>
    <string name="email_i">E-mail :</string>
    <string name="url_i">Official Website</string>
    <string name="username_i">username :</string>
    <string name="password_i">Password(Original) :</string>
    <string name="newPassword_i">New Password :</string>
    <string name="newPasswordConfirm_i">Confirm New Password :</string>
    <string name="editBegin">Edit Profile</string>
    <string name="editEnd">Save</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="editCancel">Cancel</string>
    <!-- Sing Out -->
    <string name="messageLogout">Do you really want to exit?</string>
    <string name="text_btYes">Yes</string>
    <string name="text_btNo">No</string>
    <!-- Revenue -->
    <string name="selectDate">Select Date</string>
    <string name="noRevenueData">您選擇之日期無收入</string>
    <string name="dailyRevenueTotal">日營收 : $</string>
    <string name="selectMonth">Select Month</string>
    <string name="monthlyRevenueTotal">月營收 : $</string>
    <string name="selectYear">Select Year</string>
    <string name="yearlyRevenueTotal">年營收 : $</string>
    <string name="limitCount">顯示排行數 :</string>
    <string name="noRevenueMonth">您選擇的月份無收入</string>
    <string name="keyInLimitCountOver">您輸入的顯示排行數已超過排行總數</string>
    <!-- order item -->
    <string name="buyer_phone">Phone : </string>
    <string name="buyer_picktime">Pickup Time : </string>
    <string name="soNumber">Order No. : </string>
    <string name="soTotalPrice">Total Price : $</string>
    <string name="search">Search</string>
    <string name="orderSearchPhone">請輸入手機號碼</string>
    <string name="prodId">產品編號</string>
    <string name="itemName">產品名稱</string>
    <string name="itemPrice">單價</string>
    <string name="itemAmount">數量</string>
    <string name="itemNote">備註</string>
    <!-- order item daily -->
    <string name="items">項目統計</string>
    <string name="backToPrevious">返 回 上 一 頁</string>
    <string name="subtotal">總價</string>
    <string name="overtime">Overtime</string>
    <string name="total">Total</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="complete">Complete</string>
    <string name="orderCancelOK">您已順利取消此筆訂單</string>
    <string name="orderCancelFail">訂單取消發生錯誤，請重新操作．</string>
    <string name="orderTurnToCompleteOK">您已順利將此筆訂單轉為已完成狀態</string>
    <string name="orderStatusChangeFail">訂單狀態轉換發生錯誤，請重新操作．</string>
    <string name="toComplete">Complete</string>
    <string name="toPaid">Paid</string>
    <string name="orderTurnToPaidOK">您已順利將此筆訂單轉為已結帳狀態</string>
    <string name="ordId">訂單</string>
    <string name="pickuptime">取餐時間</string>
    <string name="subTotal">小計</string>
    <string name="searchNoneDaily">您搜尋的手機號碼本日並無訂單</string>
    <string name="InprogressOrderItem">Order Summary</string>
    <!-- order item history -->
    <string name="buyer_name">Buyer Name : </string>
    <string name="buyer_orderTime">Order Time : </string>
    <string name="returnToHistory">返回到歷史訂單</string>
    <string name="searchNoneHistory">您搜尋的手機號碼此月份並無歷史訂單</string>
    <string name="sendEailFail">驗證信寄送失敗</string>
    <string name="validateNotYet">Validate</string>
    <string name="notRead">未讀取</string>


</resources>
