<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_sign"
        android:checkableBehavior="single"
        android:visible="true" >
        <!--checked為預設選取(灰底)-->
        <!--android:checked="true"-->
        <item
            android:id="@+id/item_login"
            android:title="@string/login"
            android:icon="@drawable/ic_drawer_signin"/>
        <item
            android:id="@+id/item_register"
            android:title="@string/register"
            android:icon="@drawable/ic_drawer_signup"/>
    </group>

    <group
        android:id="@+id/group_profile"
        android:checkableBehavior="single"
        android:visible="false" >
        <item
            android:id="@+id/item_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_drawer_profile" />
        <item
            android:id="@+id/item_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_drawer_signoff"/>
    </group>

    <group
        android:id="@+id/group_intradayOrders"
        android:checkableBehavior="single"
        android:visible="false" >
        <item android:title="@string/intradayOrders">
            <menu>
                <item
                    android:id="@+id/item_unprocessed"
                    android:icon="@drawable/ic_drawer_unprocessed"
                    android:title="@string/unprocessed" />
                <item
                    android:id="@+id/item_completed"
                    android:icon="@drawable/ic_drawer_completed"
                    android:title="@string/completed" />
                <item
                    android:id="@+id/item_paid"
                    android:icon="@drawable/ic_drawer_paid"
                    android:title="@string/paid" />
            </menu>
        </item>
    </group>
</menu>