<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/order_items_orange">

        <TextView
            android:id="@+id/tvOrderStatus"
            android:textStyle="bold"
            android:textColor="#ff0000"
            style="@style/style_textView_itemViewOrders_detail_top" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textView_itemViewOrders_detail_top"
                android:text="@string/buyer_orderTime" />

            <TextView
                android:id="@+id/tvOrdertime"
                style="@style/style_textView_itemViewOrders_detail_top_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textView_itemViewOrders_detail_top"
                android:text="@string/soNumber" />

            <TextView
                android:id="@+id/tvSoNumber"
                style="@style/style_textView_itemViewOrders_detail_top_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textView_itemViewOrders_detail_top"
                android:text="@string/buyer_name" />

            <TextView
                android:id="@+id/tvBuyerName"
                style="@style/style_textView_itemViewOrders_detail_top_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textView_itemViewOrders_detail_top"
                android:text="@string/buyer_phone" />

            <TextView
                android:id="@+id/tvBuyerPhone"
                style="@style/style_textView_itemViewOrders_detail_top_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textView_itemViewOrders_detail_top"
                android:text="@string/soTotalPrice" />

            <TextView
                android:id="@+id/tvTotalPrice"
                style="@style/style_textView_itemViewOrders_detail_top_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/style_textView_itemViewOrders_detail_top"
                android:text="@string/buyer_picktime" />

            <TextView
                android:id="@+id/tvPicktime"
                style="@style/style_textView_itemViewOrders_detail_top_value" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/tlOrderDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:shrinkColumns="4" >

            <TableRow>
                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/prodId"/>

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/itemName"
                    android:layout_width="60dp" />

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/itemPrice"/>

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/itemAmount"/>

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/itemNote"
                    android:layout_width="60dp"/>

            </TableRow>

            <View
                android:layout_height="5px"
                android:background="#ccc"/>
            <!-- 分割線 -->

        </TableLayout>

    </ScrollView>

</LinearLayout>