<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:background="#403d8af7"
        android:orientation="vertical">
        <!--帳號(檢查帳號).密碼.密碼確認.店家名稱.餐廳類別.
            分店.地址.電話.電子郵件.店家負責人.官方網站    -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/mustEnter"
            android:textSize="22sp"
            android:textColor="#ff0000"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etUsername"
                style="@style/style_editText_register"
                android:hint="@string/usernameInput"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPassword"
                style="@style/style_editText_register"
                android:hint="@string/passwordInput"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPasswordConfirm"
                style="@style/style_editText_register"
                android:hint="@string/passwordConfirm"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etStoreName"
                style="@style/style_editText_register"
                android:hint="@string/storeName"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spRestType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:padding="5dp"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBranch"
                style="@style/style_editText_register"
                android:hint="@string/branch"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddress"
                style="@style/style_editText_register"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPhone"
                style="@style/style_editText_register"
                android:hint="@string/phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                style="@style/style_editText_register"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etOwner"
                style="@style/style_editText_register"
                android:hint="@string/owner"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etUrl"
                style="@style/style_editText_register"
                android:hint="@string/url"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btRegister"
            style="@style/style_button"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_blue"
            android:onClick="onSubmitClick"
            android:text="@string/login" />
    </LinearLayout>
</ScrollView>
