<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ntut.grabandgo.orders_daily.PaidOrderDetailActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btBack"
            style="@style/style_button"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_blue"
            android:onClick="onBackClick"
            android:text="@string/backToPrevious" />

        <LinearLayout
            android:id="@+id/linearLayoutOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btBack"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/order_items_orange"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvOrderStatus"
                style="@style/style_textView_itemViewOrders_detail_top"
                android:textColor="#ff0000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPickerName"
                style="@style/style_textView_itemViewOrders_detail_top"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_textView_itemViewOrders_detail_top"
                    android:text="@string/soTotalPrice" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    style="@style/style_textView_itemViewOrders_detail_top_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_textView_itemViewOrders_detail_top"
                    android:text="@string/buyer_phone" />

                <TextView
                    android:id="@+id/tvPhone"
                    style="@style/style_textView_itemViewOrders_detail_top_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_textView_itemViewOrders_detail_top"
                    android:text="@string/soNumber" />

                <TextView
                    android:id="@+id/tvSoNumber"
                    style="@style/style_textView_itemViewOrders_detail_top_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_textView_itemViewOrders_detail_top"
                    android:text="@string/buyer_picktime" />

                <TextView
                    android:id="@+id/tvPicktime"
                    style="@style/style_textView_itemViewOrders_detail_top_value" />

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:id="@+id/tlOrderDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutOrder"
            android:layout_margin="10dp"
            android:shrinkColumns="4">

            <TableRow>

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/prodId" />

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:layout_width="70dp"
                    android:text="@string/itemName" />

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/itemPrice" />

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/itemAmount" />

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:text="@string/subtotal" />

                <TextView
                    style="@style/style_textView_itemViewOrders_detail"
                    android:layout_width="70dp"
                    android:text="@string/itemNote" />

            </TableRow>

            <View
                android:layout_height="5px"
                android:background="#ccc" />
            <!-- 分割線 -->

        </TableLayout>

    </RelativeLayout>

</LinearLayout>
