<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ntut.grabandgo.Restaurant_related.RestValidateNotYetActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#d9d8d7">

            <TextView
                android:id="@+id/tvNotBeenValidateFirst"
                android:text="@string/notBeenValidate"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="24sp"
                style="@style/style_textView_resend_email"/>

            <TextView
                android:id="@+id/tvNotBeenValidateSecond"
                android:text="@string/notBeenValidateSecond"
                style="@style/style_textView_resend_email"/>

            <TextView
                android:id="@+id/tvNotBeenValidateThird"
                android:text="@string/notBeenValidateThird"
                style="@style/style_textView_resend_email"/>

            <Button
                android:id="@+id/reSendEmail"
                android:text="@string/reSendEmail"
                android:onClick="btResendEmail"
                style="@style/style_button_resend_email" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
